# wikipedia-upload

./: "  Dockerfile.bee  Dockerfile.brotler  Dockerfile.preparer  Dockerfile.proxy  Dockerfile.signFeed  Dockerfile.zim-tools  README.md  bee-config.yaml  build.sh  calculations.py  cron.py  error.html  index.html  proxy.conf  proxy.sh  tool.py  upload-from-zim.sh  upload.py  upload.sh  uploads.log.OLD
brotler/: Cargo.toml
brotler/src/: main.rs
db/: go.mod  go.sum  main.go  scan_files.go
db/pkg/: mydb.go
db/pkg/mydb/: mydb.go
files_tool/: go.mod  go.sum  scan_files.go  upload.go
files_tool/mydb/: mydb.go
preparer/: Cargo.toml  go.mod
preparer/src/: brotler.go  indexer.go
proxy/: Cargo.toml
proxy/src/: main.rs
signFeed/: package.json  signfeed-cli.js
static/: error.html  index.html
