[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
reqwest = { version = "0.11.10", features = ["stream"] }
clap = { version = "3.1.18", features = ["derive"] }

