[package]
name = "proxy"
version = "0.1.0"
description = "A simple proxy that adds/removes headers. Currently supports only GET requests. May not conform to standards."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
reqwest = { version = "0.11.10", features = ["stream"] }
clap = { version = "3.1.18", features = ["derive"] }
brotlic = "0.7.0"
async-stream = "0.3.3"
futures = "0.3.21"
